[gd_scene load_steps=2 format=3 uid="uid://cwbe7v7tlib1v"]

[ext_resource type="Script" path="res://prefab/Graph.gd" id="1_mdm86"]

[node name="Graph" type="Panel"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdm86")

[node name="Plot_1" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
width = 1.0
default_color = Color(1, 0, 0, 1)

[node name="Plot_2" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
width = 1.0
default_color = Color(0, 1, 0, 1)

[node name="Plot_3" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
width = 1.0
default_color = Color(0, 0, 1, 1)
